# cueforge_qt6

./: .gitignore  BUILD_INSTRUCTIONS.md  CMakeLists.text  CMakeLists.txt  PROJECT_NOTES.md  README.md
phase1/: CMakeLists.txt
src/: main.cpp
src/audio/: AudioEngineQt.cpp  AudioEngineQt.h  JuceAudioEngine.cpp  JuceAudioEngine.h  JuceColourStub.cpp  JuceHeader.cpp
src/audio/standalone/: JuceEngineStandalone.cpp  JuceEngineStandalone.h  StandaloneTest.cpp
src/core/: Cue.cpp  Cue.h  CueManager.cpp  CueManager.h  ErrorHandler.cpp  ErrorHandler.h
src/core/cues/: AudioCue.cpp  AudioCue.h  ControlCue.cpp  ControlCue.h  GroupCue.cpp  GroupCue.h  VideoCue.h  WaitCue.cpp  WaitCue.h
src/ui/: CueListWidget.cpp  CueListWidget.h  CueTreeModel.cpp  CueTreeModel.h  InspectorWidget.cpp  InspectorWidget.h  MainWindow.cpp  MainWindow.h  TransportWidget.cpp  TransportWidget.h
